--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,24 @@
 asgiref==3.5.0
-asttokens==2.0.5
-backcall==0.2.0
-decorator==5.1.1
+beautifulsoup4==4.10.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 Django==4.0.3
 djangorestframework==3.13.1
-executing==0.8.3
-ipdb==0.13.9
-ipython==8.1.1
-jedi==0.18.1
-matplotlib-inline==0.1.3
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.28
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.11.2
+idna==3.3
+MouseInfo==0.1.3
+Pillow==9.0.1
+PyAutoGUI==0.9.53
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+PyScreeze==0.1.28
+python3-xlib==0.15
+pytweening==1.0.4
 pytz==2022.1
-six==1.16.0
+pywhatkit==5.3
+requests==2.27.1
+soupsieve==2.3.1
 sqlparse==0.4.2
-stack-data==0.2.0
-toml==0.10.2
-traitlets==5.1.1
-uuid==1.30
-wcwidth==0.2.5
+urllib3==1.26.9
+wikipedia==1.4.0
