--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.0
 asttokens==2.0.5
 backcall==0.2.0
 decorator==5.1.1
+dj-database-url==0.5.0
 Django==4.0.3
 djangorestframework==3.13.1
 executing==0.8.3
@@ -14,6 +15,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.28
+psycopg2-binary==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.11.2
