--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.5.0
 asttokens==2.0.5
+attrs==24.2.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
+brazilcep==6.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
@@ -16,9 +18,11 @@ gunicorn==20.1.0
 idna==3.8
 ipdb==0.13.9
 ipython==8.1.1
+isodate==0.6.1
 itsdangerous==2.2.0
 jedi==0.18.1
 Jinja2==3.1.4
+lxml==5.3.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.3
 MouseInfo==0.1.3
@@ -26,6 +30,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 pillow==10.4.0
+platformdirs==4.3.3
 prompt-toolkit==3.0.28
 psycopg2-binary==2.9.3
 ptyprocess==0.7.0
@@ -43,6 +48,8 @@ pytweening==1.2.0
 pytz==2022.1
 pywhatkit==5.4
 requests==2.32.3
+requests-file==2.1.0
+requests-toolbelt==1.0.0
 six==1.16.0
 soupsieve==2.6
 sqlparse==0.4.2
@@ -54,3 +61,4 @@ uuid==1.30
 wcwidth==0.2.5
 Werkzeug==3.0.4
 wikipedia==1.4.0
+zeep==4.2.1
